--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -40,4 +44,22 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //retrofit
+    implementation('com.squareup.retrofit2:retrofit:2.9.0')
+
+    //gson converter
+    implementation ('com.squareup.retrofit2:converter-gson:2.9.0')
+
+    //picasso
+    implementation ('com.squareup.picasso:picasso:2.71828')
+
+    //okHttps
+    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+
+    //Loggin interceptors
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
+
+    // rxjava, rxandroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
