--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,14 @@ dependencies {
 
     // rxjava, rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    //Data room
+    implementation 'androidx.room:room-ktx:2.4.2'
+    implementation 'androidx.room:room-runtime:2.4.2'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha04'
+
+    implementation 'androidx.fragment:fragment-ktx:1.5.0-alpha03'
+    implementation 'io.insert-koin:koin-android:3.2.0-beta-1'
 }
