--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -48,25 +49,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //retrofit
-    implementation('com.squareup.retrofit2:retrofit:2.9.0')
+    //
 
-    //gson converter
-    implementation ('com.squareup.retrofit2:converter-gson:2.9.0')
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.6'
 
-    //picasso
-    implementation ('com.squareup.picasso:picasso:2.71828')
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
-    //okHttps
-    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
 
-    //Loggin interceptors
-    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
-
-    // rxjava, rxandroid
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-
-    //Data room
     implementation 'androidx.room:room-ktx:2.4.2'
     implementation 'androidx.room:room-runtime:2.4.2'
 
@@ -75,4 +67,16 @@ dependencies {
 
     implementation 'androidx.fragment:fragment-ktx:1.5.0-alpha03'
     implementation 'io.insert-koin:koin-android:3.2.0-beta-1'
+
+    //koin
+    implementation "io.insert-koin:koin-android:3.1.5"
+    implementation "io.insert-koin:koin-core:3.1.5"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+
+    kapt "androidx.room:room-compiler:2.4.2"
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
