--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,10 @@ dependencies {
 
     kapt "androidx.room:room-compiler:2.4.2"
 
+    //rxjava
+    implementation("io.reactivex.rxjava2:rxandroid:2.1.1")
+    implementation("io.reactivex.rxjava2:rxjava:2.2.9")
+
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
