--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,12 +88,15 @@ dependencies {
     //rxjava
     implementation("io.reactivex.rxjava2:rxandroid:2.1.1")
     implementation("io.reactivex.rxjava2:rxjava:2.2.9")
+    implementation "androidx.room:room-rxjava2:2.4.2"
+    implementation "androidx.room:room-runtime:2.4.2"
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //toolbar
     implementation 'androidx.appcompat:appcompat:1.2.0'
-
     implementation 'com.google.android.material:material:1.2.1'
+
+
 }
