--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,11 +85,27 @@ dependencies {
 
     kapt "androidx.room:room-compiler:2.4.2"
 
+    //rxjava
+    implementation("io.reactivex.rxjava2:rxandroid:2.1.1")
+    implementation("io.reactivex.rxjava2:rxjava:2.2.9")
+    implementation "androidx.room:room-rxjava2:2.4.2"
+    implementation "androidx.room:room-runtime:2.4.2"
+
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //toolbar
     implementation 'androidx.appcompat:appcompat:1.2.0'
-
     implementation 'com.google.android.material:material:1.2.1'
+
+    //testing
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation "io.mockk:mockk:1.12.3"
+    implementation 'androidx.test.ext:truth:1.4.0'
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
